--- a/vida/updated/02-margaret-lucas.adoc
+++ b/vida/updated/02-margaret-lucas.adoc
@@ -2016,7 +2016,7 @@ según todas las apariencias,
 más allá de la recuperación. De muy buena gana me hubiera rendido a la muerte,
 prefiriendo morir que vivir para no desobedecer más;
 pero al Señor le plació probarme una y otra vez en lo secreto de mi alma,
-para ver si viviría para obedecer a Sus requerimientos, o si moriría.: mi elección fue,
+para ver si viviría para obedecer a Sus requerimientos, o si moriría: mi elección fue,
 antes morir que vivir para ser predicadora.
 Sin embargo, le plació a Él en Su sabiduría, levantarme de nuevo,
 contrario a las expectativas de los que estaban a mi alrededor;
