último error...ML

--- a/vida/updated/02-margaret-lucas.adoc
+++ b/vida/updated/02-margaret-lucas.adoc
@@ -828,7 +828,7 @@ porque escondiste estas cosas de los sabios y entendidos,
 y las has revelado a los niños.`" Ese directo favor de la amorosa bondad del Señor,
 tuvo un gran impacto sobre mí;
 me levanté de la silla y caí sobre mis rodillas para
-recibir la sobreabundancia de su poder;
+recibir la sobreabundancia de Su poder;
 y tal fue el efecto,
 que por medio de Su ayuda clamé desde mi alma unas cuántas palabras de súplica al Señor,
 rogando una mayor manifestación de Su voluntad y Su preservación en ella.
